<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
        android:id="@+id/text_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
            android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/title_settings" />

        <TextView
            android:id="@+id/text_settings_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Setting_subtitle"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/horizontalLine"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/Constraint_notify_1">

            <TextView
                android:id="@+id/notification_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_option1"
                android:textColor="@color/white"
                android:textSize="19.5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <Switch
                android:id="@+id/notif_switch1"
                android:layout_width="90dp"
                android:scaleY="1.4"
                android:scaleX="1.4"
                android:theme="@style/notificationSwitch"
                android:layout_height="match_parent"
                android:buttonTint="@color/colorPrimary"
                android:layout_marginRight="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/horizontalLine" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/Constraint_notify_2">

            <TextView
                android:id="@+id/notification_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_option2"
                android:textColor="@color/white"
                android:textSize="19.5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <Switch
                android:id="@+id/notif_switch2"
                android:layout_width="90dp"
                android:scaleY="1.4"
                android:scaleX="1.4"
                android:layout_height="match_parent"
                android:theme="@style/notificationSwitch"
                android:buttonTint="@color/colorPrimary"
                android:layout_marginRight="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/horizontalLine" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/Constraint_notify_3">

            <TextView
                android:id="@+id/notification_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_option3"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/notif_switch3"
                android:layout_width="90dp"
                android:scaleY="1.4"
                android:scaleX="1.4"
                android:layout_height="match_parent"
                android:theme="@style/notificationSwitch"
                android:buttonTint="@color/colorPrimary"
                android:layout_marginRight="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/horizontalLine" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/Constraint_notify_4">

            <TextView
                android:id="@+id/notification_four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_option4"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/notif_switch4"
                android:layout_width="90dp"
                android:scaleY="1.4"
                android:scaleX="1.4"
                android:layout_height="match_parent"
                android:buttonTint="@color/colorPrimary"
                android:theme="@style/notificationSwitch"
                android:layout_marginRight="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/horizontalLine" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/Constraint_notify_5">

            <TextView
                android:id="@+id/notification_five"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_option5"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/notif_switch5"
                android:layout_width="90dp"
                android:scaleY="1.4"
                android:scaleX="1.4"
                android:layout_height="match_parent"
                android:buttonTint="@color/colorPrimary"
                android:theme="@style/notificationSwitch"
                android:layout_marginRight="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/horizontalLine" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/Constraint_notify_6">

            <TextView
                android:id="@+id/notification_six"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_option6"
                android:textColor="@color/white"
                android:textSize="19.5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <Switch
                android:id="@+id/notif_switch6"
                android:layout_width="90dp"
                android:scaleY="1.4"
                android:scaleX="1.4"
                android:layout_height="match_parent"
                android:buttonTint="@color/colorPrimary"
                android:theme="@style/notificationSwitch"
                android:layout_marginRight="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/horizontalLine" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/Constraint_notify_7">

            <TextView
                android:id="@+id/notification_seven"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_option7"
                android:textColor="@color/white"
                android:textSize="19.5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <Switch
                android:id="@+id/notif_switch7"
                android:layout_width="90dp"
                android:scaleY="1.4"
                android:scaleX="1.4"
                android:layout_height="match_parent"
                android:buttonTint="@color/colorPrimary"
                android:theme="@style/notificationSwitch"
                android:layout_marginRight="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/horizontalLine" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>