<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="16dp">

        <ImageButton
            android:id="@+id/edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_edit_24"
            android:layout_marginTop="6dp"
            android:background="@color/transparent"
            android:layout_marginStart="350dp"/>

        <EditText
            android:id="@+id/userName_editText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="9dp"
            android:hint="Username"
            android:inputType="text"
            android:maxLines="1"
            android:textAlignment="center"
            android:textSize="30dp"
            android:visibility="invisible" />
        <TextView
            android:id="@+id/userName_textview"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:layout_marginTop="12dp"
            android:text=""
            android:maxLines="1"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textStyle="bold"/>
        <View
            android:layout_width="300dp"
            android:layout_centerHorizontal="true"
            android:layout_height="0.5dp"
            android:background="@color/horizontalLine"
            android:layout_marginTop="57dp"/>

        <TextView
            android:id="@+id/textview_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:textColor="@color/white"
            android:layout_alignParentEnd="false"
            android:layout_marginTop="65dp"
            android:layout_marginEnd="174dp"
            android:layout_centerHorizontal="true"
            android:text="@string/textview_user_level"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/user_level_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="false"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="98dp"
            android:layout_marginEnd="172dp"
            android:ems="3"
            android:hint=""
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="25dp"
            android:visibility="invisible" />
        <TextView
            android:id="@+id/user_level_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="false"
            android:layout_marginTop="101dp"
            android:layout_marginEnd="172dp"
            android:ems="3"
            android:text=""
            android:textSize="40dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/textview_team_140"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="false"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="142dp"
            android:layout_marginEnd="172dp"
            android:text="@string/textvies_user_team"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:visibility="invisible" />
        <TextView
            android:id="@+id/textview_team_160"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:textColor="@color/white"
            android:layout_alignParentEnd="false"
            android:layout_marginTop="162dp"
            android:layout_marginEnd="172dp"
            android:text="@string/textvies_user_team"
            android:textSize="20dp"
            android:layout_centerHorizontal="true"/>

        <RadioGroup
            android:id="@+id/teamSelection_group"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="false"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="177dp"
            android:layout_marginEnd="172dp"
            android:visibility="invisible">

            <RadioButton
                android:id="@+id/team_Instinct"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:buttonTint="@color/white"
                android:enabled="false"
                android:text="@string/user_team_radio_Instinct"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/team_Mystic"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:buttonTint="@color/white"
                android:enabled="false"
                android:text="@string/user_team_radio_Mystic"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/team_Valor"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:buttonTint="@color/white"
                android:enabled="false"
                android:text="@string/user_team_radio_Valor"
                android:textColor="@color/white" />

        </RadioGroup>
        <TextView
            android:id="@+id/choosed_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginTop="212dp"
            android:textSize="30dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/textview_gyms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="false"
            android:textColor="@color/white"
            android:layout_marginTop="282dp"
            android:layout_marginEnd="172dp"
            android:text="@string/textview_user_gyms"
            android:textSize="25dp"
            android:layout_centerHorizontal="true"/>

        <ListView
            android:id="@android:id/list"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="330dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/gyms_choosed"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="false"
            android:layout_marginTop="360dp"
            android:background="@android:color/darker_gray"
            android:textSize="20dp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"/>




    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>